--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
 
     <div class="bandeau_oursons">
-        <img src="" alt="">
+        <img src="picutres/nounours-maman-vogue.jpg" alt="bandeau">
         <div class="bandeau_oursons-texte">
             <h2>OriOursons</h2>
             <p>Tous nos oursons sont fabriqués a la main par des professionnels, <br/> pour la joie des plus petits</p>
