--- a/index.html
+++ b/index.html
@@ -9,30 +9,41 @@
     <title>OriOursons</title>
 </head>
 <body>
-    <header class="header">
+    <header>
         <div class="header-nav">
             <div class="header-nav-logo">
-                <h1>OriOursons</H1>
+                <h1>OrinOursons</H1>
             </div>
             <div class="header-nav-panier">
-                <a href="frontend/panier.html">
+                <a href="frontend/panier.html" class="header-nav-panier-cart">
                     <i class="fas fa-shopping-cart"></i>
                 </a>
             </div>
         </div>
     </header>
 
-    <div class="bandeau_oursons">
+    <div class="bandeau-oursons">
         <img src="frontend/picutres/nounours-maman-vogue.jpg" alt="bandeau">
-        <div class="bandeau_oursons-texte">
-            <h2>OriOursons</h2>
+        <div class="bandeau-oursons-texte">
+            <h2>OrinOursons</h2>
             <p>Tous nos oursons sont fabriqués a la main par des professionnels, <br/> pour la joie des plus petits</p>
         </div>
     </div>
 
     <main>
-        <section id="container">
+        <section id="container-products">
+            <h3>Nos produits</h3>
+            <div class="products">
+
+            </div>
         </section>
     </main>
+
+    <footer>
+        <div class="nav-footer">
+            <a href="" class="nav-footer-link">Contact</a>
+            <a href="" class="nav-footer-link">Mentions légals</a>
+        </div>
+    </footer>
 </body>
 </html>
