index.html with css done

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="devboot/font-awesome.min.css" type="text/css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/c4fb02f0fe.js" crossorigin="anonymous"></script>
     <title>OriOursons</title>
 </head>
 <body>
@@ -25,8 +25,8 @@
     <div class="bandeau-oursons">
         <img src="frontend/picutres/nounours-maman-vogue.jpg" alt="bandeau">
         <div class="bandeau-oursons-texte">
-            <h2>OrinOursons</h2>
-            <p>Tous nos oursons sont fabriqués a la main par des professionnels, <br/> pour la joie des plus petits</p>
+            <h2>Chez OrinOursons,</h2>
+            <p>Tous nos oursons sont fabriqués à la main par des professionnels, <br/> pour la joie des plus petits</p>
         </div>
     </div>
 
@@ -41,8 +41,8 @@
 
     <footer>
         <div class="nav-footer">
-            <a href="" class="nav-footer-link">Contact</a>
-            <a href="" class="nav-footer-link">Mentions légals</a>
+            <a href="#" class="nav-footer-link">Contact</a>
+            <a href="#" class="nav-footer-link">Mentions légals</a>
         </div>
     </footer>
 </body>
