fetch + add products in index

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
         </div>
     </div>
 
-    <main>
-        <section id="container-products">
-            <h3>Nos produits</h3>
-            <div class="products">
+    <main id="main">  
+            <section id="container-products">
+                <h3>Nos produits</h3>
+                <div id="allproducts">
 
-            </div>
-        </section>
+                </div>
+            </section>
     </main>
 
     <footer>
@@ -45,5 +45,7 @@
             <a href="#" class="nav-footer-link">Mentions légals</a>
         </div>
     </footer>
+    <script src="index.js"></script>
+    <script src="frontend/js/oursons.js"></script>
 </body>
 </html>
