index html finish

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <h1>OrinOursons</H1>
             </div>
             <div class="header-nav-panier">
-                <a href="frontend/panier.html" class="header-nav-panier-cart">
+                <a href="frontend/html/panier.html" class="header-nav-panier-cart">
                     <i class="fas fa-shopping-cart"></i>
                 </a>
             </div>
