--- a/frontend/html/produit.html
+++ b/frontend/html/produit.html
@@ -7,7 +7,7 @@
     <title>OrinOursons-produits</title>
 </head>
 <body>
-    <div class="produts">
+    <div class="products">
         
     </div>
 </body>
