--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/small.css" media="(min-width: 576px) and (max-width: 767.98px)">
+    <link rel="stylesheet" href="css/medium.css" media="(min-width: 768px) and (max-width: 1023.98px)">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/c4fb02f0fe.js" crossorigin="anonymous"></script>
     <title>OriOursons</title>
@@ -15,7 +17,7 @@
                 <h1>OrinOursons</H1>
             </div>
             <div class="header-nav-panier">
-                <a href="frontend/html/panier.html" class="header-nav-panier-cart">
+                <a href="html/panier.html" class="header-nav-panier-cart">
                     <i class="fas fa-shopping-cart"></i>
                 </a>
             </div>
@@ -23,7 +25,7 @@
     </header>
 
     <div class="bandeau-oursons">
-        <img src="frontend/picutres/nounours-maman-vogue.jpg" alt="bandeau">
+        <img src="picutres/nounours-maman-vogue.jpg" alt="bandeau">
         <div class="bandeau-oursons-texte">
             <h2>Chez OrinOursons,</h2>
             <p>Tous nos oursons sont fabriqués à la main par des professionnels, <br/> pour la joie des plus petits</p>
@@ -46,6 +48,6 @@
         </div>
     </footer>
     <script src="index.js"></script>
-    <script src="frontend/js/oursons.js"></script>
+    <script src="js/oursons.js"></script>
 </body>
 </html>
