--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/small.css" media="(min-width: 576px) and (max-width: 767.98px)">
-    <link rel="stylesheet" href="css/medium.css" media="(min-width: 768px) and (max-width: 1023.98px)">
-    <link rel="stylesheet" href="style.css">
+       <link rel="stylesheet" href="style.css" /> 
+       <link rel="stylesheet" href="css/small.css" media="(min-width: 500px) and (max-width: 1023.98px)">
+       <link rel="stylesheet" href="css/xsmall.css" media="(max-width: 499.98px)">
     <script src="https://kit.fontawesome.com/c4fb02f0fe.js" crossorigin="anonymous"></script>
     <title>OriOursons</title>
 </head>
