panier css finish

--- a/frontend/html/panier.html
+++ b/frontend/html/panier.html
@@ -20,7 +20,7 @@
     </header>
   
     <section class="recap-commande">
-      <table id="containerProduct">
+      <table id="containerCart">
   
         <thead>
           <tr>
