--- a/frontend/html/confirmation.html
+++ b/frontend/html/confirmation.html
@@ -4,9 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../css/small.css">
+    <link rel="stylesheet" href="../css/xsmall.css">
+    <script src="https://kit.fontawesome.com/c4fb02f0fe.js" crossorigin="anonymous"></script>
+    <title>OrinOursons-Confirmation</title>
 </head>
+
 <body>
-    
-</body>
+    <header>
+        <div class="header-nav">
+            <div class="header-nav-logo">
+                <h1><a href="../index.html">OrinOursons</a></H1>
+            </div>
+        </div>
+    </header>
+  
+    <div id="confirm">
+  
+    </div>
+  
+    <footer>
+        <div class="nav-footer">
+            <a href="#" class="nav-footer-link">Contact</a>
+            <a href="#" class="nav-footer-link">Mentions légals</a>
+        </div>
+    </footer>
+    <script src="../js/confirmation.js"></script>
+    <script src="../js/oursons.js"></script>
+  </body>
 </html>
