--- a/frontend/html/panier.html
+++ b/frontend/html/panier.html
@@ -32,6 +32,7 @@
             <th>Prix Total</th>
           </tr>
         </thead>
+        <tbody id="containerCartBody"></tbody>
         <tfoot>
             <tr>
                 <td>TOTAL</td>
@@ -55,28 +56,28 @@
   
       <div>
         <label for="nom">Nom *:</label><br />
-        <input type="text" id="nom" name="nom" required="required" placeholder="Leo" />
+        <input type="text" id="nom" name="nom" required="required" placeholder="Votre Nom" />
       </div>
   
       <div>
         <label for="prenom">Prenom *:</label><br />
-        <input type="text" id="prenom" name="prenom" required="required" placeholder="Martin" />
+        <input type="text" id="prenom" name="prenom" required="required" placeholder="Votre Prénom" />
       </div>
   
       <div>
         <label for="adresse">Adresse *:</label><br />
-        <input type="text" id="adresse" name="adresse" required="required" placeholder="3 rue des cerises" />
+        <input type="text" id="adresse" name="adresse" required="required" placeholder="Votre adresse" />
       </div>
   
       <div>
         <label for="ville">Ville *:</label><br />
-        <input type="text" id="ville" name="text" required="required" placeholder=" Nice "
+        <input type="text" id="ville" name="text" required="required" placeholder=" Votre ville "
           pattern="^[a-zA-Z]{1}[a-zA-Z'À-ÿ -]+$" />
       </div>
   
       <div>
         <label for="email">E-mail *:</label><br />
-        <input type="email" id="email" name="email" required="required" placeholder="martin@yahoo.fr"
+        <input type="email" id="email" name="email" required="required" placeholder="Votre e-mail"
           pattern="[a-zA-Z0-9._-]+@[a-zA-Z0-9._-]+.[a-zA-Z.]{2,15}" />
       </div>
   
