--- a/frontend/html/produit.html
+++ b/frontend/html/produit.html
@@ -8,7 +8,7 @@
        <link rel="stylesheet" href="../css/small.css" media="(min-width: 500px) and (max-width: 1023.98px)">
        <link rel="stylesheet" href="../css/xsmall.css" media="(max-width: 499.98px)">
     <script src="https://kit.fontawesome.com/c4fb02f0fe.js" crossorigin="anonymous"></script>
-    <title>OriOursons</title>
+    <title>OriOursons-Produit</title>
 </head>
 <body>
     <header>
