adding nombred'article.js +amelioration

--- a/frontend/html/panier.html
+++ b/frontend/html/panier.html
@@ -28,8 +28,9 @@
             <th>Nom</th>
             <th>Prix Unitaire</th>
             <th>Quantitée</th>
-            <th>Supprimer</th>
+            <th>Ajouter/ <br> Supprimer</th>
             <th>Prix Total</th>
+            <th>Tous <br> Supprimer</th>
           </tr>
         </thead>
         <tbody id="containerCartBody"></tbody>
