--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,6 +20,7 @@
                 <a href="html/panier.html" class="header-nav-panier-cart">
                     <i class="fas fa-shopping-cart"></i>
                 </a>
+                    <div class="number-cart"></div>
             </div>
         </div>
     </header>
@@ -49,5 +50,6 @@
     </footer>
     <script src="index.js"></script>
     <script src="js/oursons.js"></script>
+    <script src="js/nombresArticles.js"></script>
 </body>
 </html>
