--- a/html/confirmation.html
+++ b/html/confirmation.html
@@ -30,7 +30,7 @@
             <a href="#" class="nav-footer-link">Mentions légals</a>
         </div>
     </footer>
-    <script src="../js/confirmation.js"></script>
-    <script src="../js/oursons.js"></script>
+    <script src="js/confirmation.js"></script>
+    <script src="js/oursons.js"></script>
   </body>
 </html>
