--- a/html/produit.html
+++ b/html/produit.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-       <link rel="stylesheet" href="../../style.css" /> 
+       <link rel="stylesheet" href="../style.css" /> 
        <link rel="stylesheet" href="../css/small.css" media="(min-width: 500px) and (max-width: 1023.98px)">
        <link rel="stylesheet" href="../css/xsmall.css" media="(max-width: 499.98px)">
     <script src="https://kit.fontawesome.com/c4fb02f0fe.js" crossorigin="anonymous"></script>
@@ -14,7 +14,7 @@
     <header>
         <div class="header-nav">
             <div class="header-nav-logo">
-                <h1><a href="../../index.html">OrinOursons</a></H1>
+                <h1><a href="../index.html">OrinOursons</a></H1>
             </div>
             <div class="header-nav-panier">
                 <a href="../html/panier.html" class="header-nav-panier-cart">
