translate french to english

--- a/html/panier.html
+++ b/html/panier.html
@@ -37,13 +37,13 @@
         <tfoot>
             <tr>
                 <td>TOTAL</td>
-                <td id="prixTotal"></td>
+                <td id="totalPrice"></td>
             </tr>
         </tfoot>
         
       </table>
   
-      <button id="viderPanier" class="viderPanier">Vider tous le Panier </button>
+      <button id="emptyCart" class="viderPanier">Vider tous le Panier </button>
     </section>
   
     <form action="#" method="POST" id="form">
@@ -82,7 +82,7 @@
           pattern="[a-zA-Z0-9._-]+@[a-zA-Z0-9._-]+.[a-zA-Z.]{2,15}" />
       </div>
   
-      <input type="submit" value="Commander" id="envoiFormulaire" />
+      <input type="submit" value="Commander" id="sendForm" />
   
       <p>* Champ Obligatoire</p>
     </form>
