modification namming file

--- a/html/panier.html
+++ b/html/panier.html
@@ -93,6 +93,6 @@
             <a href="#" class="nav-footer-link">Mentions légals</a>
         </div>
     </footer>
-    <script src="../js/panier.js"></script>
+    <script src="../js/cart.js"></script>
   </body>
 </html>
