--- a/html/produit.html
+++ b/html/produit.html
@@ -35,7 +35,7 @@
             <a href="#" class="nav-footer-link">Mentions légals</a>
         </div>
     </footer>
-    <script src="../js/produit.js"></script>
-    <script src="../js/nombresArticles.js"></script>
+    <script src="../js/product.js"></script>
+    <script src="../js/numbersOfArticles.js"></script>
 </body>
 </html>
