--- a/index.html
+++ b/index.html
@@ -49,6 +49,6 @@
         </div>
     </footer>
     <script src="index.js"></script>
-    <script src="js/nombresArticles.js"></script>
+    <script src="js/numbersOfArticles.js"></script>
 </body>
 </html>
