changing color border send order and modification nammin folder

--- a/html/product.html
+++ b/html/product.html
@@ -17,7 +17,7 @@
                 <h1><a href="../index.html">OrinOursons</a></H1>
             </div>
             <div class="header-nav-panier">
-                <a href="../html/panier.html" class="header-nav-panier-cart">
+                <a href="../html/cart.html" class="header-nav-panier-cart">
                     <i class="fas fa-shopping-cart"></i>
                 </a>
                     <div class="number-cart"></div>
